refactor(Cars): 외부에서 Car 컬렉션을 다루지 않도록 코드를 이동한다
- Cars는 가장 멀리 이동한 자동차를 계산할 수 있다.
- Cars는 자동차 컬렉션이 유효한 사이즈인기 검사한다.
- Cars는 자신의 현재 상태(결과)를 제공한다.
- Cars는 모든 자동차를 조건에 맞게 이동시킨다.